# Harmonious

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF-TL.md  HANDOFF-discovery-synthesis-share-generics-inlining.md  HANDOFF-release-mode-build-fix.md  README.md  bug-report-regex-static-call-misclassified-as-trait.md  convo-with-rustc.md  course-correct.md  design-convo-log.md  future-architecture-investigations.md  generics-law-convo-1.md  generics-law-convo-2.md  generics-law-convo-3.md  handoff-phase7-uuid.md  handoff-two-crate-migration.md  handoff.md  maintainers-guide.md  phase-e-investigation.md  phase-e-rustc-pr-draft.md  phase3-e6-scope-notes.md  quest.md  response-reducing-rustc-fork.md  rust-interop-architecture-guide.md  rust-interop-architecture.md  rust-interop-design-convo-log.md  rust-toolchain.toml  test_extern  tl-handoff.md  workstream-a-scope-notes.md
toylangc/: .gitignore  Cargo.toml  rustc-ice-2026-04-04T20_44_19-34919.txt  rustc-ice-2026-04-04T20_44_19-34921.txt  rustc-ice-2026-04-04T20_44_19-34922.txt  rustc-ice-2026-04-04T20_44_19-34923.txt  rustc-ice-2026-04-04T20_44_19-34924.txt  rustc-ice-2026-04-04T20_44_19-34925.txt  rustc-ice-2026-04-04T20_44_19-34926.txt  rustc-ice-2026-04-04T20_44_19-35255.txt  rustc-ice-2026-04-04T20_44_19-35282.txt
toylangc/src/: build.rs  cache.rs  cache_key.rs  llvm_gen.rs  main.rs  manifest.rs  oracle.rs  sidecar.rs  stub_gen.rs  typeid.rs
toylangc/src/toylang/: ast.rs  callbacks_impl.rs  mod.rs  parser.rs  registry.rs  type_resolve.rs  typed_ast.rs
toylangc/tests/: architecture_fence.rs  cache_audit.rs  cache_determinism.rs  cache_key_axis_fence.rs  cache_trait_impl_fence.rs  cleanup_audit.rs  counter_test.rs  decoupling_fence.rs  drop_point.toylang  host.rs  instance_kind_coverage_fence.rs  integration_projects.rs  integration_tests.rs  mangler_version_fence.rs  pair_test.rs  passthrough_corpus.rs  standalone_tests.rs
toylangc/tests/common/: inlining_harness.rs
toylangc/tests/integration_projects/and_false/: main.toylang  toylang.toml
toylangc/tests/integration_projects/and_higher_precedence_than_or/: main.toylang  toylang.toml
toylangc/tests/integration_projects/and_true/: main.toylang  toylang.toml
toylangc/tests/integration_projects/and_with_comparisons/: main.toylang  toylang.toml
toylangc/tests/integration_projects/arithmetic/: toylang.toml
toylangc/tests/integration_projects/arithmetic_sub_div/: main.toylang  toylang.toml
toylangc/tests/integration_projects/assign_basic/: main.toylang  toylang.toml
toylangc/tests/integration_projects/assign_in_if/: main.toylang  toylang.toml
toylangc/tests/integration_projects/assign_in_while/: main.toylang  toylang.toml
toylangc/tests/integration_projects/assign_in_while_with_if/: main.toylang  toylang.toml
toylangc/tests/integration_projects/bool_return/: main.toylang  toylang.toml
toylangc/tests/integration_projects/byte_string_let_binding/: main.toylang  toylang.toml
toylangc/tests/integration_projects/byte_string_passed_to_rust_fn/: main.toylang  toylang.toml
toylangc/tests/integration_projects/case1a_rust_caller/: main.toylang  toylang.toml
toylangc/tests/integration_projects/case1b_rust_calls_generic/: rust_caller.rs  toylang.toml
toylangc/tests/integration_projects/case1b_rust_calls_generic_o3/: rust_caller.rs  toylang.toml
toylangc/tests/integration_projects/case3_rust_sky_back_to_rust/: main.toylang  rust_caller.rs  toylang.toml
toylangc/tests/integration_projects/case4_sky_impl_rust_trait/: main.toylang  rust_caller.rs  toylang.toml
toylangc/tests/integration_projects/case5_rust_sky_vec/: main.toylang  rust_caller.rs  toylang.toml
toylangc/tests/integration_projects/case6_app/: main.toylang  toylang.toml
toylangc/tests/integration_projects/case6_app_fat_lto/: toylang.toml
toylangc/tests/integration_projects/case6_app_o3/: toylang.toml
toylangc/tests/integration_projects/case6_lib/: main.toylang  toylang.toml
toylangc/tests/integration_projects/case_generic_impl_block/: main.toylang  toylang.toml
toylangc/tests/integration_projects/case_generic_impl_block_two_params/: toylang.toml
toylangc/tests/integration_projects/case_generic_impl_block_two_params_o3/: main.toylang  toylang.toml
toylangc/tests/integration_projects/comparison_with_arithmetic/: main.toylang  toylang.toml
toylangc/tests/integration_projects/comparison_with_variables/: main.toylang  toylang.toml
toylangc/tests/integration_projects/compound_while_condition/: main.toylang  toylang.toml
toylangc/tests/integration_projects/concrete_calls_concrete/: main.toylang  toylang.toml
toylangc/tests/integration_projects/counter_construct/: main.toylang  toylang.toml
toylangc/tests/integration_projects/deep_chain_only_entry_point_monomorphized/: main.toylang  toylang.toml
toylangc/tests/integration_projects/deep_t_r_t_r/: main.toylang  toylang.toml
toylangc/tests/integration_projects/diamond_call_pattern/: main.toylang  toylang.toml
toylangc/tests/integration_projects/dqd_app/: main.toylang  toylang.toml
toylangc/tests/integration_projects/dqd_lib_a/: main.toylang  toylang.toml
toylangc/tests/integration_projects/dqd_lib_b/: main.toylang  toylang.toml
toylangc/tests/integration_projects/else_if_chain/: main.toylang  toylang.toml
toylangc/tests/integration_projects/else_if_key_dispatch/: main.toylang  toylang.toml
toylangc/tests/integration_projects/eq_false/: main.toylang  toylang.toml
toylangc/tests/integration_projects/eq_true/: main.toylang  toylang.toml
toylangc/tests/integration_projects/extern_fn_call/: main.toylang  toylang.toml
toylangc/tests/integration_projects/extern_fn_decl_still_works/: main.toylang  toylang.toml
toylangc/tests/integration_projects/ge_true/: main.toylang  (+1 more)
toylangc/tests/scripts/: gen_inlining_matrix.sh  gen_opt_level_matrix.sh  run_cache_vs_sidecar_bench.sh  run_perf_bench.sh
(+680 files in other folders)
