[package]
name = "toylangc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "toylangc"
path = "src/main.rs"

[dependencies]
rustc-lang-facade = { path = "../rustc-lang-facade" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
prettyplease = "0.2"
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "ffc9d5b", features = ["llvm19-1"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[package.metadata.rust-analyzer]
rustc_private = true
