[package]
name = "some_rust_lib"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# Self-contained workspace — keeps cargo from walking up into the outer
# `erw` workspace and treating this crate as a member there. Mirrors the
# `test_helpers` arrangement used by every interop fixture.
[workspace]
