# Passthrough corpus fixture: a generics-heavy pure-Rust crate. Exercises
# rustc's mono collector + share_generics paths across many concrete
# instantiations. The forked rustc's Sky machinery must remain dormant
# (no `__SKY_STUBS_MARKER`); runtime output must match vanilla nightly.
#
# Stand alone: empty [workspace] detaches this fixture from the parent
# erw workspace (which doesn't list it under members). Without this,
# cargo errors with "current package believes it's in a workspace when
# it's not" because the fixture lives under /Users/verdagon/erw/ and
# cargo walks upward looking for a workspace root.
[workspace]

[package]
name = "passthrough_generics_heavy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "passthrough_generics_heavy"
path = "src/main.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
