# Passthrough corpus fixture: trait dispatch + dyn-trait scenarios.
# Pure Rust; exercises rustc's vtable + dyn-dispatch codegen.
#
# Stand alone: empty [workspace] detaches this fixture from the parent
# erw workspace (which doesn't list it under members). Without this,
# cargo errors with "current package believes it's in a workspace when
# it's not" because the fixture lives under /Users/verdagon/erw/ and
# cargo walks upward looking for a workspace root.
[workspace]

[package]
name = "passthrough_trait_dispatch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "passthrough_trait_dispatch"
path = "src/main.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
